specification.yaml example Added example for endpoints that may clash with those with path params

--- a/api/specification.yaml
+++ b/api/specification.yaml
@@ -11,6 +11,9 @@ path:
       parameters:
         - name: body
           in: body
+  /info/useragent:
+    get:
+      controller: getUserAgent
   /info/:name:
     get:
       controller: getInfoOfName
